pix : 루틴 수정 기능 수정(하드코딩->RAG)